Fixed alignement of category options in menu

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -247,6 +247,11 @@ main {
   display: flex;
 }
 
+#nav-main-lg .pet-type {
+  display: flex;
+  justify-content: space-between;
+}
+
 #nav-main-lg .secondary-menu ul {
   display: flex;
   justify-content: space-around;
@@ -1334,30 +1339,30 @@ tfoot {
   font-size: 2.4rem;
 }
 
-.form-line{
+.form-line {
   display: flex;
   flex-direction: row;
 }
 
-#form-product{
+#form-product {
   display: flex;
   gap: 1.5rem;
 }
 
-#form-price-item{
+#form-price-item {
   padding-left: 0;
 }
 
-#form-discount-item{
-  padding-left: calc(var(--bs-gutter-x) * .5);
+#form-discount-item {
+  padding-left: calc(var(--bs-gutter-x) * 0.5);
 }
 
-#create-user{
+#create-user {
   display: flex;
   gap: 1.5rem;
 }
 
-.card-img-cl{
+.card-img-cl {
   border-radius: 12px;
   background-color: var(--white);
   width: 100%;
@@ -1370,12 +1375,12 @@ tfoot {
   padding: 1.2rem;
 }
 
-.card-img-cl img{
+.card-img-cl img {
   max-height: 15rem;
   max-width: 15rem;
 }
 
-.form-container{
+.form-container {
   display: flex;
   margin-bottom: 2rem;
 }
@@ -1459,70 +1464,70 @@ tfoot {
     font-family: "Poppins-Regular";
     font-size: 1.8rem;
   }
-  .navbar-main-header-window{
+  .navbar-main-header-window {
     background-color: var(--purple);
     color: var(--black);
-    padding:0 1rem;
-   }
+    padding: 0 1rem;
+  }
 
-   .container-list{
+  .container-list {
     display: flex;
     flex-direction: column;
-    gap:38rem;
+    gap: 38rem;
     height: 100%;
-   }   
-   .navbar-main-header-title{
+  }
+  .navbar-main-header-title {
     background-color: var(--green);
-   }
-   
-   #nav-main-top{
-     display: flex;
-     flex-direction: row;
-     align-items: center;
-     justify-content:space-between;
-     gap: 2rem;
-   }
-   
-   .nav-main-header-component{
-     max-width: 75%;
-   }
-   
-   .container-fluid{
-    width:100%;
-     display: flex;
-     flex-direction: row;
-     gap: 1rem;
-   }
+  }
 
-   .container-search{
-    display:flex;
+  #nav-main-top {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2rem;
+  }
+
+  .nav-main-header-component {
+    max-width: 75%;
+  }
+
+  .container-fluid {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+  }
+
+  .container-search {
+    display: flex;
     justify-content: center;
-   }
+  }
 
-   .bottom-line{
+  .bottom-line {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     border-bottom: solid var(--black) 0.1rem;
-   }
+  }
 
-   #nav-main-md{
+  #nav-main-md {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-   }
+  }
 
-   #nav-main-md a{
+  #nav-main-md a {
     color: var(--black);
-   }
+  }
 
-   .wishlist-options{
+  .wishlist-options {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     border-top: solid var(--black) 0.1rem;
     display: flex;
     align-items: center;
     padding-left: 1.6rem;
-   }
+  }
 }
 
 @media (max-width: 600px) {
@@ -1531,8 +1536,8 @@ tfoot {
   }
 }
 
-@media (max-width: 992px){
-  .form-line{
+@media (max-width: 992px) {
+  .form-line {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
